--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
+    <title>Mail list</title>
 </head>
 <body>
-    
+    <main id="vueContainer">
+
+        <ul> 
+            <li v-for="(mail,index) in mailList"> {{mailList[index]}}</li>
+        </ul>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
