--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main id="vueContainer">
         <h1>Lista di mail random</h1>
         <ul> 
-            <li v-for="(mail,index) in mailList"> {{mailList[index]}}</li>
+            <li v-for="(mail,index) in mailList"> {{mailListCompleted[index]}}</li>
         </ul>
     </main>
     <script src="script.js"></script>
