--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     <main id="vueContainer">
         <div class="heading">
             <h1>Lista di mail random</h1>
-            <a href="index.html">
-                <div class="btn"> Ricarica</div>
-            </a>
+            <div @click="randomEmails()" class="btn"> Ricarica</div>
         </div>
         <div class="container">
             <ul>
